// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeObject fails when given an object 1`] = `
"<dim>expect(</><red>received</><dim>).not.toBeObject()</>

Expected value to not be an object, received:
  <red>{}</>"
`;

exports[`.toBeObject fails when not given an object:  1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>\\"\\"</>"
`;

exports[`.toBeObject fails when not given an object: () => {} 1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>[Function anonymous]</>"
`;

exports[`.toBeObject fails when not given an object: [ 1, 2, 3 ] 1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>[1, 2, 3]</>"
`;

exports[`.toBeObject fails when not given an object: 0 1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>0</>"
`;

exports[`.toBeObject fails when not given an object: NaN 1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>NaN</>"
`;

exports[`.toBeObject fails when not given an object: false 1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>false</>"
`;

exports[`.toBeObject fails when not given an object: undefined 1`] = `
"<dim>expect(</><red>received</><dim>).toBeObject()</>

Expected value to be an object, received:
  <red>undefined</>"
`;
